--- a/public/style/style-extra-tv.css
+++ b/public/style/style-extra-tv.css
@@ -17,16 +17,17 @@ h1 {
 }
 aside.materiais {
     margin-top: 64px;
-    margin-left: 80px;
-    width: 60%;
+    margin-left: 0px;
+    width: 64%;
     gap: 36px;
     flex-direction: column;
+    align-items: center;
+    justify-self: flex-end;
 }
 /* estilo dos botões dos sites */
 a.site, a.video, a.ebook, a.article, a.academics {
     font-size: 0.7em;
     padding: 24px;
-    margin-left: -8px;
     width: 64px;
     height: 8px;
     border-radius: 16px;
@@ -41,10 +42,14 @@ a.article, a.academics {
 main {
     width: 80vw;
     margin-top: 32px;
+    box-shadow: 7px 4px 14px -14px var(--dois); 
 }
 section.referencias {
     width: 72vw;
     gap: 8px;
+}
+div.legenda_section {
+    width: 64vw;
 }
 h2.titulo_section {
     font-size: 1.6em;
