ajustes dos formatos do inputs

--- a/views/pages/article.ejs
+++ b/views/pages/article.ejs
@@ -45,12 +45,12 @@
 
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="volume">VOLUME</label>
-                        <input type="text" name="lvolume" id="volume" placeholder="Ex.: 5">
+                        <input type="number" name="lvolume" id="volume" placeholder="Ex.: 5">
                     </form>
 
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="issue">FASCÍCULO</label>
-                        <input type="text" name="lissue" id="issue" placeholder="Ex.: 3">
+                        <input type="number" name="lissue" id="issue" placeholder="Ex.: 3">
                     </form> 
 
                     <form action="" class="formulario">
@@ -70,7 +70,7 @@
 
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="access">ACESSO EM</label>
-                        <input type="text" name="laccess" id="access" placeholder="Ex.: 14 abr. 2021">
+                        <input type="date" name="laccess" id="access" placeholder="Ex.: 14 abr. 2021">
                     </form>
 
                     <button type="submit" class="send_article">ENVIAR</button>
